[gd_scene load_steps=13 format=3 uid="uid://cnhgv62itjbsf"]

[ext_resource type="Script" uid="uid://bcpxuaif15wdo" path="res://scripts/toast.gd" id="1_iywne"]
[ext_resource type="Script" uid="uid://cc7rnccnl2ps0" path="res://scripts/menu.gd" id="1_lbhrr"]
[ext_resource type="Theme" uid="uid://crx8tm52vfc7p" path="res://themes/text.tres" id="2_iywne"]
[ext_resource type="Texture2D" uid="uid://cc0c6igotgn1a" path="res://images/copy.svg" id="3_p57ef"]
[ext_resource type="Script" uid="uid://o4h40ox0iaai" path="res://scenes/data.gd" id="4_iywne"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_lbhrr"]
properties/0/path = NodePath(".:metadata/players")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath("UI/Menu/Lobby/Container/Code:text")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath("UI/Menu/Lobby/Container/Copy:visible")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:metadata/lobby_id")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:metadata/cards_amount")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath("UI/Menu:visible")
properties/5/spawn = true
properties/5/replication_mode = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yqeox"]
content_margin_left = 14.0
content_margin_top = 14.0
content_margin_right = 14.0
content_margin_bottom = 14.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iywne"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="SystemFont" id="SystemFont_p57ef"]

[sub_resource type="FontVariation" id="FontVariation_u5sy4"]
base_font = SubResource("SystemFont_p57ef")
variation_face_index = 1
variation_embolden = 0.79

[sub_resource type="StyleBoxLine" id="StyleBoxLine_p57ef"]
content_margin_left = 5.0
content_margin_top = 0.0
content_margin_right = 5.0
content_margin_bottom = 0.0
color = Color(0.5, 0.5, 0.5, 1)
grow_begin = 0.0
grow_end = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lnu2h"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.18039216, 0.18039216, 0.18039216, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 12.0
expand_margin_right = 12.0

[node name="Game" type="Node"]
metadata/players = []
metadata/cards_amount = 4
metadata/lobby_id = ""
metadata/id = 0
metadata/can_host = true

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://dbe25rm777nk7")
spawn_path = NodePath("..")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
delta_interval = 0.5
replication_config = SubResource("SceneReplicationConfig_lbhrr")

[node name="UI" type="Node" parent="."]

[node name="Menu" type="CenterContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9937827, 1)
script = ExtResource("1_lbhrr")

[node name="Main" type="VBoxContainer" parent="UI/Menu"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Host" type="Button" parent="UI/Menu/Main"]
layout_mode = 2
theme = ExtResource("2_iywne")
text = "   Host   "

[node name="Join" type="Button" parent="UI/Menu/Main"]
layout_mode = 2
theme = ExtResource("2_iywne")
text = "Join"

[node name="Joining" type="VBoxContainer" parent="UI/Menu"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="Code" type="LineEdit" parent="UI/Menu/Joining"]
layout_mode = 2
theme = ExtResource("2_iywne")
placeholder_text = " Enter Lobby ID "
alignment = 1
max_length = 11
expand_to_text_length = true
context_menu_enabled = false
emoji_menu_enabled = false

[node name="Join" type="CenterContainer" parent="UI/Menu/Joining"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="UI/Menu/Joining"]
layout_mode = 2
theme_override_constants/separation = 34
alignment = 1

[node name="Back" type="Button" parent="UI/Menu/Joining/Buttons"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme = ExtResource("2_iywne")
text = "Back"

[node name="Join" type="Button" parent="UI/Menu/Joining/Buttons"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme = ExtResource("2_iywne")
text = "Join"

[node name="Lobby" type="VBoxContainer" parent="UI/Menu"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="Container" type="HBoxContainer" parent="UI/Menu/Lobby"]
layout_mode = 2
theme_override_constants/separation = 14
alignment = 1

[node name="Code" type="Label" parent="UI/Menu/Lobby/Container"]
editor_description = "format as following when online id is present
Lobby ID: <Online ID>"
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_iywne")
text = "Retrieving Lobby ID..."

[node name="Copy" type="Button" parent="UI/Menu/Lobby/Container"]
visible = false
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
icon = ExtResource("3_p57ef")
icon_alignment = 1
metadata/lobby_id = ""

[node name="Players" type="PanelContainer" parent="UI/Menu/Lobby"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_yqeox")

[node name="Container" type="VBoxContainer" parent="UI/Menu/Lobby/Players"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_constants/separation = 14

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="UI/Menu/Lobby/Players"]
_spawnable_scenes = PackedStringArray("uid://c3l5bvxy6ro2e")
spawn_path = NodePath("../Container")

[node name="Cards" type="HBoxContainer" parent="UI/Menu/Lobby"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="UI/Menu/Lobby/Cards"]
layout_mode = 2
theme = ExtResource("2_iywne")
text = "Cards:"

[node name="Subtract" type="Button" parent="UI/Menu/Lobby/Cards"]
layout_mode = 2
theme = ExtResource("2_iywne")
text = "  -  "

[node name="Amount" type="Label" parent="UI/Menu/Lobby/Cards"]
layout_mode = 2
theme = ExtResource("2_iywne")
text = "4"

[node name="Add" type="Button" parent="UI/Menu/Lobby/Cards"]
layout_mode = 2
theme = ExtResource("2_iywne")
text = "  +  "

[node name="Buttons" type="CenterContainer" parent="UI/Menu/Lobby"]
layout_mode = 2

[node name="Container" type="HBoxContainer" parent="UI/Menu/Lobby/Buttons"]
layout_mode = 2
theme_override_constants/separation = 34

[node name="Leave" type="Button" parent="UI/Menu/Lobby/Buttons/Container"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme = ExtResource("2_iywne")
text = "Leave"

[node name="Start" type="Button" parent="UI/Menu/Lobby/Buttons/Container"]
visible = false
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
theme = ExtResource("2_iywne")
text = "Start"

[node name="Timer" type="Timer" parent="UI/Menu"]
wait_time = 0.05
ignore_time_scale = true

[node name="Data" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -131.0
offset_right = -23.0
offset_bottom = 131.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iywne")
script = ExtResource("4_iywne")

[node name="Container" type="VBoxContainer" parent="UI/Data"]
layout_mode = 2

[node name="Title" type="PanelContainer" parent="UI/Data/Container"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Data/Container/Title"]
layout_mode = 2
theme = ExtResource("2_iywne")
theme_override_fonts/font = SubResource("FontVariation_u5sy4")
theme_override_font_sizes/font_size = 42
text = "Round Data"
horizontal_alignment = 1

[node name="CardsHand" type="Label" parent="UI/Data/Container"]
layout_mode = 2
theme = ExtResource("2_iywne")
text = "Cards Per Hand:"
horizontal_alignment = 1

[node name="SeparatorA" type="HSeparator" parent="UI/Data/Container"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxLine_p57ef")

[node name="CardsPlay" type="Label" parent="UI/Data/Container"]
layout_mode = 2
theme = ExtResource("2_iywne")
text = "Cards Played:"
horizontal_alignment = 1

[node name="SeparatorB" type="HSeparator" parent="UI/Data/Container"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxLine_p57ef")

[node name="TimePlay" type="Label" parent="UI/Data/Container"]
layout_mode = 2
theme = ExtResource("2_iywne")
text = "Time Played:"
horizontal_alignment = 1

[node name="SeparatorC" type="HSeparator" parent="UI/Data/Container"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxLine_p57ef")

[node name="Success" type="Label" parent="UI/Data/Container"]
layout_mode = 2
theme = ExtResource("2_iywne")
text = "Successful Game:"
horizontal_alignment = 1

[node name="Toast" type="PanelContainer" parent="UI"]
unique_name_in_owner = true
visible = false
z_index = 54
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -60.0
offset_right = 20.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_lnu2h")
script = ExtResource("1_iywne")

[node name="Label" type="Label" parent="UI/Toast"]
layout_mode = 2
theme = ExtResource("2_iywne")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="UI/Toast"]
wait_time = 4.0
one_shot = true
ignore_time_scale = true

[node name="Build" type="Label" parent="UI"]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -28.0
offset_right = 86.0
offset_bottom = -5.0
grow_vertical = 0
text = "Build 1.0.8"
vertical_alignment = 2

[node name="Username" type="Label" parent="UI"]
unique_name_in_owner = true
offset_left = 15.0
offset_top = 5.0
offset_right = 118.0
offset_bottom = 52.0
theme = ExtResource("2_iywne")
vertical_alignment = 1

[connection signal="pressed" from="UI/Menu/Main/Host" to="UI/Menu" method="_main_host_pressed"]
[connection signal="pressed" from="UI/Menu/Main/Join" to="UI/Menu" method="_main_join_pressed"]
[connection signal="pressed" from="UI/Menu/Joining/Buttons/Back" to="UI/Menu" method="_joined_back_pressed"]
[connection signal="pressed" from="UI/Menu/Joining/Buttons/Join" to="UI/Menu" method="_joining_join_pressed"]
[connection signal="pressed" from="UI/Menu/Lobby/Container/Copy" to="UI/Menu" method="_lobby_copy_pressed"]
[connection signal="pressed" from="UI/Menu/Lobby/Cards/Subtract" to="UI/Menu" method="_lobby_cards_subtract"]
[connection signal="pressed" from="UI/Menu/Lobby/Cards/Add" to="UI/Menu" method="_lobby_cards_add"]
[connection signal="pressed" from="UI/Menu/Lobby/Buttons/Container/Leave" to="UI/Menu" method="_lobby_leave_pressed"]
[connection signal="pressed" from="UI/Menu/Lobby/Buttons/Container/Start" to="UI/Menu" method="_lobby_start_pressed"]
